@@ -5,6 +5,7 @@ import com.example.mogakserver.common.exception.model.BadRequestException;
 import com.example.mogakserver.common.exception.model.NotFoundException;
 import com.example.mogakserver.common.exception.model.UnAuthorizedException;
 import com.example.mogakserver.external.redis.RedisService;
+import com.example.mogakserver.external.socket.WebRtcWebSocketHandler;
 import com.example.mogakserver.external.socket.WebSocketBroadCaster;
 import com.example.mogakserver.external.socket.service.ScreenShareService;
 import com.example.mogakserver.external.socket.service.TimerService;
@@ -30,8 +31,11 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.socket.WebSocketHandler;
+import org.springframework.web.socket.WebSocketSession;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -55,6 +59,8 @@ public class RoomUserService {
     private final TimerService timerService;
     private final RedisService redisService;
     private final WebSocketBroadCaster webSocketBroadcaster;
+    private final WebSocketHandler webSocketHandler;
+    private final WebRtcWebSocketHandler webRtcWebSocketHandler;
 
     public void updateIsScreenShareLargeAllowed(Long userId, Long roomId){
         RoomUser roomUser = roomUserRepository.findByUserIdAndRoomId(userId, roomId).orElseThrow(()->new NotFoundException(ErrorCode.NOT_FOUND_ROOM_EXCEPTION));
@@ -216,21 +222,34 @@ public class RoomUserService {
 
     @Transactional(readOnly = true)
     public RoomUserListDTO getRoomUsers(Long userId, Long roomId) {
-        boolean isParticipant = roomUserRepository.findByUserIdAndRoomId(userId, roomId).isPresent();
+        List<WebSocketSession> roomSessions = webRtcWebSocketHandler.getSessionsByRoomId(roomId);
+        List<RoomUserDTO> users = new ArrayList<>();
+        boolean isEmptyRoom = false;
+
+        if(roomSessions==null || roomSessions.isEmpty()){
+            isEmptyRoom = true;
+        }
+        // 본인이 해당 방 참여자인지 검증
+        boolean isParticipant = roomSessions.stream()
+            .anyMatch(session -> userId.equals(webRtcWebSocketHandler.getUserIdFromSession(session)));
+
         if (!isParticipant) {
             throw new NotFoundException(ErrorCode.ROOM_PERMISSION_DENIED);
         }
 
-        List<RoomUserDTO> users = roomUserRepository.findByRoomId(roomId).stream()
-                .map(roomUser -> {
-                    User user = userRepository.findById(roomUser.getUserId())
-                            .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND_EXCEPTION));
+        if(!isEmptyRoom){
+            users = roomSessions.stream()
+                .map(session -> {
+                    Long connectedUserId = webRtcWebSocketHandler.getUserIdFromSession(session);
+                    User user = userRepository.findById(connectedUserId)
+                        .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND_EXCEPTION));
                     return RoomUserDTO.builder()
-                            .userId(user.getId())
-                            .nickName(user.getNickName())
-                            .build();
+                        .userId(user.getId())
+                        .nickName(user.getNickName())
+                        .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
+        }
 
         return RoomUserListDTO.builder()
                 .users(users)
